--- a/avro-converter/pom.xml
+++ b/avro-converter/pom.xml
@@ -7,16 +7,8 @@
     <parent>
         <groupId>io.confluent</groupId>
         <artifactId>kafka-schema-registry-parent</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.0.4</version>
     </parent>
-
-    <licenses>
-        <license>
-            <name>Apache License 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
     <artifactId>kafka-connect-avro-converter</artifactId>
     <packaging>jar</packaging>
@@ -149,7 +141,7 @@
                             <sourceUrl>https://github.com/confluentinc/schema-registry</sourceUrl>
                             
                             <supportProviderName>Confluent, Inc.</supportProviderName>
-                            <supportSummary>Confluent supports the Avro Converter alongside community members as part of its Confluent Platform offering.</supportSummary>
+                            <supportSummary>Confluent supports the Avro Converter alongside community members as part of its Confluent Platform open source offering.</supportSummary>
                             <supportUrl>https://docs.confluent.io/current/</supportUrl>
                             <supportLogo>logos/confluent.png</supportLogo>
                             
