--- a/avro-serializer/pom.xml
+++ b/avro-serializer/pom.xml
@@ -7,16 +7,8 @@
     <parent>
         <groupId>io.confluent</groupId>
         <artifactId>kafka-schema-registry-parent</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.0.4</version>
     </parent>
-
-    <licenses>
-        <license>
-            <name>Apache License 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
     <artifactId>kafka-avro-serializer</artifactId>
     <packaging>jar</packaging>
