--- a/debian/Makefile
+++ b/debian/Makefile
@@ -9,9 +9,13 @@ ifndef VERSION
 VERSION=$(shell grep version pom.xml | head -n 1 | awk -F'>|<' '{ print $$3 }')
 endif
 
+ifndef SECURITY_SUFFIX
+SECURITY_SUFFIX=
+endif
+
 export PACKAGE_TITLE=schema-registry
 export FULL_PACKAGE_TITLE=confluent-schema-registry
-export PACKAGE_NAME=$(FULL_PACKAGE_TITLE)-$(VERSION)
+export PACKAGE_NAME=$(FULL_PACKAGE_TITLE)-$(VERSION)$(SECURITY_SUFFIX)
 
 # Defaults that are likely to vary by platform. These are cleanly separated so
 # it should be easy to maintain altered values on platform-specific branches
@@ -77,14 +81,14 @@ install: build
 	for svc in debian/*.service ; do \
 	    $(INSTALL) -o root -g root -D $$svc $(DESTDIR)$(SYSTEMDDIR)/$$(basename $$svc) ; \
 	done
-	pushd "package-schema-registry/target/kafka-schema-registry-package-$(VERSION)-package" ; \
+	pushd "package-schema-registry/target/kafka-schema-registry-package-$(VERSION)$(SECURITY_SUFFIX)-package" ; \
 	find bin/ -type f | grep -v README[.]rpm | xargs -I XXX $(INSTALL_X) -o root -g root XXX $(DESTDIR)$(PREFIX)/XXX ;\
 	find share/ -type f | grep -v README[.]rpm | xargs -I XXX $(INSTALL) -o root -g root XXX $(DESTDIR)$(PREFIX)/XXX ; \
 	pushd etc/schema-registry/ ; \
 	find . -type f | grep -v README[.]rpm | xargs -I XXX $(INSTALL) -o root -g root XXX $(DESTDIR)$(SYSCONFDIR)/XXX
 
 	# kafka-serde-tools
-	pushd "package-kafka-serde-tools/target/kafka-serde-tools-package-$(VERSION)-package"; \
+	pushd "package-kafka-serde-tools/target/kafka-serde-tools-package-$(VERSION)$(SECURITY_SUFFIX)-package"; \
 	find bin/ -type f | grep -v README[.]rpm | xargs -I XXX $(INSTALL_X) -o root -g root XXX $(DESTDIR)$(PREFIX)/XXX ; \
 	find share/ -type f | grep -v README[.]rpm | xargs -I XXX $(INSTALL) -o root -g root XXX $(DESTDIR)$(PREFIX)/XXX ; \
 	popd
