--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.confluent</groupId>
         <artifactId>rest-utils-parent</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.0.4</version>
     </parent>
 
     <artifactId>kafka-schema-registry-parent</artifactId>
@@ -24,11 +24,6 @@
     </description>
 
     <licenses>
-        <license>
-            <name>Confluent Community License</name>
-            <url>http://www.confluent.io/confluent-community-license</url>
-            <distribution>repo</distribution>
-        </license>
         <license>
             <name>Apache License 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
@@ -63,7 +58,6 @@
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
         <podam.version>6.0.2.RELEASE</podam.version>
-        <checkstyle.suppressions.location>checkstyle/suppressions.xml</checkstyle.suppressions.location>
         <kafka.connect.maven.plugin.version>0.11.1</kafka.connect.maven.plugin.version>
     </properties>
 
@@ -139,7 +133,7 @@
                         <sourceUrl>https://github.com/confluentinc/schema-registry</sourceUrl>
                         
                         <supportProviderName>${project.organization.name}</supportProviderName>
-                        <supportSummary>Confluent supports the Avro Converter alongside community members as part of its Confluent Platform offering.</supportSummary>
+                        <supportSummary>Confluent supports the Avro Converter alongside community members as part of its Confluent Platform open source offering.</supportSummary>
                         <supportUrl>https://docs.confluent.io/current/</supportUrl>
                         <supportLogo>logos/confluent.png</supportLogo>
                         
